# EVE

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs  pipeline.rs  wav.rs
src/codec/: mfsk_decode.rs  mfsk_encode.rs  mod.rs
src/framing/: depacketizer.rs  mod.rs  packetizer.rs
src/transport/: mod.rs  udp.rs
src/voip/: mod.rs  rtp.rs  sip.rs
tests/: e2e_network_test.rs  integration_test.rs
